<resources>
    <string name="app_name">Title Screen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Floofa Rescue</string>
    <string name="play_button">PLAY</string>
    <string name="settings_button">SETTINGS</string>
    <string name="title_activity_level_screen">Levels</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="title_activity_level_one">Level One</string>
</resources>
