<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.brendaxiao.titlescreen.LevelScreenActivity"
    android:background="@drawable/geo_p10">

    <TextView android:text="@string/title_activity_level_screen"
        android:layout_width="wrap_content"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/levels"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:text="@string/one"
        android:background="#ffffc423"
        android:id="@+id/level1"
        android:onClick="playOne"
        android:layout_marginTop="87dp"
        android:layout_below="@+id/levels"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:text="@string/two"
        android:id="@+id/level2"
        android:background="#ffffc423"
        android:layout_alignBottom="@+id/level1"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:text="@string/three"
        android:background="#ffffc423"
        android:id="@+id/level3"
        android:layout_alignTop="@+id/level2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
